# claude-compact

./: .gitignore  README.md  pyproject.toml
src/claude_compact/: __init__.py  cli.py  config.py  exports.py  installer.py
src/claude_compact/hooks/: __init__.py  precompact.py  sessionstart.py
